src/objects/Social_Handle__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Social Handles</relationshipLabel>
        <relationshipName>Social_Handles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Handle_Icon__c</fullName>
        <label>Handle Icon</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Handle_Link__c</fullName>
        <label>Handle Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Social Handle</label>
    <nameField>
        <label>Social Handle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Social Handles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>